extra space no longer needed

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ h4 {
 
 ul {
   list-style-type:'🐈‍⬛  ';
-  padding-inline-start: 54px;
 }
 
 li::marker {
